CAR/deploy/kubernetes/django/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: django
  template:
    metadata:
      labels:
        pod: django
    spec:
      containers:
        - name: django
          image: waztom/car:latest
          ports:
            - name: http
              containerPort: 8000
          imagePullPolicy: Always
