CAR/deploy/kubernetes/django/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: django-service
spec:
  selector:
    app: django
  ports:
    - name: http
      port: 8000
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
