CAR/deploy/kubernetes/django/test-compile.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: django
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: django
  name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - env:
        - name: SECRET_KEY
          valueFrom:
            secretKeyRef:
              key: SECRET_KEY
              name: env-credentials
        - name: IBM_API_KEY
          valueFrom:
            secretKeyRef:
              key: IBM_API_KEY
              name: env-credentials
        - name: DB_NAME
          valueFrom:
            secretKeyRef:
              key: DB_NAME
              name: env-credentials
        - name: DB_HOST
          valueFrom:
            secretKeyRef:
              key: DB_HOST
              name: env-credentials
        - name: CELERY_BROKER_URL
          valueFrom:
            secretKeyRef:
              key: CELERY_BROKER_URL
              name: env-credentials
        - name: CELERY_RESULT_BACKEND
          valueFrom:
            secretKeyRef:
              key: CELERY_RESULT_BACKEND
              name: env-credentials
        - name: POSTGRES_USER
          valueFrom:
            secretKeyRef:
              key: POSTGRES_USER
              name: env-credentials
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: POSTGRES_PASSWORD
              name: env-credentials
        image: waztom/car:latest
        name: django
        ports:
        - containerPort: 8000
